# Hunyuan3D-2-minimica

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  api.py  dockerfile  generate_mv_enhanced.py
hy3dgen/texgen/custom_rasterizer/: BUILD.bazel
