module(
    name = "hunyuan3d",
    version = "1.0.0",
)

# Rules for Docker
bazel_dep(name = "rules_oci", version = "1.7.4")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# Rules for Python
bazel_dep(name = "rules_python", version = "0.40.0")

# Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.10")

# Python dependencies
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "hunyuan3d_pypi",
    python_version = "3.10",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "hunyuan3d_pypi")

# OCI base image
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "cuda_base",
    image = "docker.io/nvidia/cuda:12.8.1-cudnn-devel-ubuntu22.04",
    platforms = ["linux/amd64"],
)
use_repo(oci, "cuda_base")