module(
    name = "hunyuan3d",
    version = "1.0.0",
)

# Rules for Docker
bazel_dep(name = "rules_oci", version = "1.7.4")

# OCI base image
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "cuda_base",
    image = "docker.io/nvidia/cuda:12.8.1-cudnn-devel-ubuntu22.04",
    platforms = ["linux/amd64"],
)
use_repo(oci, "cuda_base")